[3단계 - 요금 정책 추가] 리뷰 요청드립니다. (#250)
* test: 실패하는 인수 테스트 작성 (10km 이내 + 노선 추가 요금)

* test: 단위 테스트 작성 (추가 요금이 있는 노선이 포함된 구간의 요금 계산)

* refactor: 메서드 리팩토링

* test: 단위 테스트 작성 (추가 요금이 있는 여러 노선이 포함된 구간의 요금 계산)

* refactor: 중복되는 코드를 메서드로 분리

* refactor: 인수 테스트가 통과하도록 노선 생성 시 추가 요금을 저장하는 로직 작성

* test: 인수 테스트 작성 (10km 이내 + 추가 요금이 있는 여러 노선)

* test: 인수 테스트 작성 (10km 초과 50km 이내 + 추가 요금이 있는 노선)

* test: 인수 테스트 작성 (10km 초과 50km 이내 + 추가 요금이 있는 여러 노선)

* test: 인수 테스트 작성 (50km 초과 + 추가 요금이 있는 노선)

* test: 인수 테스트 작성 (50km 초과 + 추가 요금이 있는 여러 노선)

* test: 인수 테스트 작성 (경로를 조회한 로그인 사용자가 성인인 경우)

* test: 실패하는 인수 테스트 작성 (꼉로를 조회한 로그인 사용자가 청소년인 경우)

* refactor: 단위 테스트 수정 (연령별 지하철 요금 계산)

* refactor: 단위 테스트 수정 (추가 요금 노선 경로의 연령별 지하철 요금 계산)

* refactor: 단위 테스트 수정 (여러 추가 요금 노선 경로의 연령별 지하철 요금 계산)

* refactor: `@AuthenticationPrincipal` 어노테이션에 required 요소 추가 및 적용

* test: 인수 테스트 작성 (경로를 조회한 로그인 사용자가 어린이인 경우)

* refactor: DiscountPolicy 단위 테스트 추가, 기존 테스트 리팩토링

* refactor: 타입 추론 적용해보기

* refactor: 메서드 분리